media-tools/jackett/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
        name: jackett
    spec:
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: server-type
                operator: In
                values:
                - nuc
      containers:
      - name: jackett
        image: linuxserver/jackett
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 9117
          initialDelaySeconds: 15
          periodSeconds: 120
        volumeMounts:
        - name: jackett
          mountPath: /config
      volumes:
        - name: jackett
          persistentVolumeClaim:
            claimName: longhorn-jackett-pvc
      automountServiceAccountToken: false
