media-tools/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett-service
  name: jackett-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 9117
    protocol: TCP
    targetPort: 9117
    name: web
  selector:
    app: jackett
